--- a/_Módulo III - Recriando Wikipedia/index.html
+++ b/_Módulo III - Recriando Wikipedia/index.html
@@ -276,7 +276,12 @@
     <p>São os itens mais comuns nos jogos do Sonic. Esses anéis contêm uma energia chamada Chaos.
         Eles têm o poder de defender os personagens. Se um personagem for atacado, ele não receberá
         dano, em compensação, perderá todos os anéis ( ou apenas 10 no caso dos jogos Triple Trouble e
-        Blast). Se um personagem não tiver nenhum anel ele morrerá, perdendo assim o jogo. Eles também têm o poder de desbloquear a super forma dos personagens junto com as Esmeraldas do Caos. As Esmeraldas do Caos junto com 50 anéis podem desbloquear a super forma de um personagem, assim como aconteceu com Sonic, Tails, Knuckles, Mecha Sonic, Shadow, Blaze e Silver. Nos primeiros jogos, eram perdidos todos os rings e, ainda por cima, não era possível recuperar todos os anéis perdidos. Atualmente, são perdidos apenas 25 anéis e é possível recuperá-los. Nos jogos atuais, os anéis também servem para Sonic utilizar a habilidade de "Boost" e melhora um pouco o salto e outras habilidades.
+        Blast). Se um personagem não tiver nenhum anel ele morrerá, perdendo assim o jogo. Eles também 
+        têm o poder de desbloquear a super forma dos personagens junto com as Esmeraldas do Caos. As Esmeraldas 
+        do Caos junto com 50 anéis podem desbloquear a super forma de um personagem, assim como aconteceu com Sonic, Tails, Knuckles,
+        Mecha Sonic, Shadow, Blaze e Silver. Nos primeiros jogos, eram perdidos todos os rings e, ainda por cima, 
+        não era possível recuperar todos os anéis perdidos. Atualmente, são perdidos apenas 25 anéis e é possível recuperá-los. 
+        Nos jogos atuais, os anéis também servem para Sonic utilizar a habilidade de "Boost" e melhora um pouco o salto e outras habilidades.
         Algumas causas de morte não podem ser prevenidas utilizando os anéis como ser esmagado, 
         cair de um abismo e se afogar.[30]
     </p>
